[gd_scene load_steps=6 format=3 uid="uid://dr5dg60e3oaq4"]

[ext_resource type="Script" uid="uid://c4on3ns4rc4nx" path="res://scenes/gameplay/hazards/black_hole.gd" id="1"]
[ext_resource type="Script" uid="uid://ce8epyg7kpekx" path="res://scripts/components/gravitational_component.gd" id="2"]

[sub_resource type="CircleShape2D" id="CircleShape2D_gravity"]
radius = 300.0

[sub_resource type="Animation" id="Animation_pulse"]
resource_name = "pulse"
length = 2.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:scale")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1, 2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1.15, 1.15), Vector2(1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_1"]
_data = {
&"pulse": SubResource("Animation_pulse")
}

[node name="BlackHole" type="Node2D"]
script = ExtResource("1")

[node name="GravitationalComponent" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 15
script = ExtResource("2")

[node name="CollisionShape2D" type="CollisionShape2D" parent="GravitationalComponent"]
shape = SubResource("CircleShape2D_gravity")

[node name="Sprite2D" type="Sprite2D" parent="."]
modulate = Color(0.6, 0.4, 0.8, 1)
scale = Vector2(1.0091126, 1.0091126)

[node name="GPUParticles2D" type="GPUParticles2D" parent="."]
amount = 30
lifetime = 1.5

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_1")
}
autoplay = "pulse"

[node name="LifetimeTimer" type="Timer" parent="."]
wait_time = 60.0
one_shot = true
